edit/edit.css
/* ... */
.beautify-hint {
  width: 0;
  min-width: 100%;
  font-size: 90%;
}

/************ single editor **************/
.usercss .CodeMirror-focused {
  box-shadow: none;
}

.sectioned .usercss-only,
.usercss .sectioned-only {
  display: none !important; /* hide during page init */
}

.single-editor {
  position: relative;
  height: 100%;
  .CodeMirror {
  /* WARNING! If you change this or .single-editor make sure editor opens huge styles like GitHub Dark instantly */
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    height: auto;
    border: none;
    outline: none;
  }
}

#footer a {
  color: var(--c20);
  transition: color .5s;
  &:hover {
    color: var(--c40);
  }
}

/************ line widget *************/
.CodeMirror-linewidget {
  .applies-to {
    margin: 0 0 .25em;
    padding: var(--target-gapY) calc(.25rem + var(--cm-bar-width, 0)) 0 .75rem;
    font-family: var(--family);
  }
  .applies-to-everything {
    margin-left: 0.2rem;
  }
}

/************ full-width only ************/
/* TODO: maybe move more rules here so we don't need to reset them in @media(max-width: 850px) */
@media (min-width: 851px) {
  #header > :not(#details-wrapper):not(#header-resizer) {
    margin-left: var(--pad);
    margin-right: var(--pad);
  }
  #publish[open],
  #header details:not([open]) {
    flex: 0 0 auto;
  }
  #header details {
    &[open]:not(:last-child) {
      margin-bottom: var(--pad05);
    }
    &:last-child {
      padding-bottom: var(--pad);
    }
  }
}

/************ reponsive layouts ************/
@media(max-width: 850px) {
  .usercss body {
    display: flex;
    flex-direction: column;
  }
  .usercss #header,
  #header:not(.sticky) {
    position: static;
  }
  #header {
    flex: 0 0 auto;
    height: unset;
    width: 100%;
    overflow: visible;
    border-right: none;
    border-bottom: 1px dashed var(--c65);
    padding: var(--pad05) var(--pad05) 0;
    &:not(.sticky) {
      display: block;
    }
    &.sticky {
      flex-direction: row;
      box-shadow: 0 0 3rem -.75rem;
      #basic-info {
        margin: 0;
      }
      #preview-errors {
        position: absolute;
        top: var(--pad05);
        right: var(--pad05);
        margin: .25em 0 0 !important;
      }
    }
    & details > :not(summary) {
      margin-left: 0;
    }
    & h2 {
      font-size: 14px;
    }
    .settings h2 {
      max-width: 7vw;
    }
  }
  #header.sticky .hide-if-sticky,
  #heading,
  h2 {
    display: none;
  }
  .popup-window {
    #header.sticky #preview-errors {
      right: calc(var(--pad05) + 24px);
    }
    #details-wrapper {
      margin-right: var(--popup-button-width);
    }
  }
  #basic-info {
    margin: 0 var(--popup-button-width) var(--pad05) 0;
    box-sizing: border-box;
    display: flex;
    flex-wrap: wrap;
    #name,
    > *:first-child {
      flex-grow: 1;
    }
    > *:not(:last-child) {
      margin-right: 0.8rem;
    }
  }
  #actions {
    display: inline-block;
    > :nth-last-child(n + 2) {
      margin-right: .25rem;
    }
  }
  #details-wrapper {
    display: inline-flex;
    vertical-align: top;
    max-width: 100%;
    flex-direction: row;
    margin: .25em .25em var(--pad05);
    > details[open] {
      margin-top: 0;
      z-index: 50;
      &:is(:hover, :focus-within) {
        z-index: 51;
      }
      > summary {
        position: static;
        margin-top: 0;
        + * {
          position: absolute;
          overflow: hidden auto;
          max-height: var(--max-height, 25vh);
          max-width: calc(100vw - 2 * var(--pad));
          background: var(--bg);
          box-shadow: 0 6px 20px rgba(0, 0, 0, .3);
          padding: var(--pad);
          margin-top: var(--pad05);
        }
      }
    }
  }
  #options > main {
    display: flex;
    flex-wrap: wrap;
    > :first-child {
      margin: 0 1em 0 0;
    }
    > :nth-child(n + 2) {
      margin: 0;
    }
  }
  @media (max-height: 500px) {
    #details-wrapper {
      --max-height: 50px;
    }
  }
  #toc,
  .lint-report-container {
    max-width: 50vw;
  }
  #publish[open],
  #lint:not([open]) {
    flex: 0 0 auto;
    overflow-x: hidden;
  }
  #publish dd {
    white-space: normal;
    max-height: 1.25em;
  }
  #sections {
    padding: 0;
  }
  .section {
    padding: var(--pad05);
  }
  .single-editor {
    overflow: hidden;
    flex: 1;
  }
  #help-popup {
    &, &.big {
      width: max-content;
      height: min-content;
      max-width: calc(100vw - 2rem);
      --top: 7rem;
      right: 1rem;
      margin: auto;
    }
    &[style*="left:"] {
      left: 1rem !important;
      margin-top: -2.35rem;
    }
    :is(.CodeMirror-lint-markers, .CodeMirror-guttermarker-subtle) {
      display: none !important;
    }
    .CodeMirror-linenumber {
      padding: 0;
    }
  }
}

